# voice-input

./: .gitignore  .motd  README.md  STATUS.md  ambient.py  ambient_infer.py  requirements.txt  transcribe.py  voice-input.sh
diagrams/: anim_01_word_state_machine.dot  anim_02_scramble_loop.dot  anim_03_cursor_positioning.dot  anim_04_confidence_colors.dot  anim_05_terminal_render.dot  audio_01_device_chain.dot  audio_02_pipewire_routing.dot  audio_03_sample_rate.dot  audio_04_raw_wav_conversion.dot  audio_05_timing_buffer.dot  gen_diagrams.py  infer_01_model_pipeline.dot  infer_02_cuda_layers.dot  infer_03_segment_struct.dot  infer_04_faster_whisper.dot  infer_05_model_loading.dot  out_01_dispatch.dot  out_02_fancy_vs_plain.dot  out_03_xdotool.dot  out_04_clipboard.dot  out_05_end_to_end.dot  proc_01_process_tree.dot  proc_02_signal_flow.dot  proc_03_state_machine.dot  proc_04_timer_logic.dot  proc_05_cleanup.dot  sys_01_block.dot  sys_02_dataflow.dot  sys_03_layers.dot  sys_04_user_interaction.dot  sys_05_component_dep.dot
motd/: 95-voice-input-status
sessions/: 2026-04-30_112540.md  2026-05-01_010708.md  2026-05-01_213123.md  2026-05-01_213942.md
voice-ambient/: Cargo.toml
voice-ambient/.cargo/: config.toml
voice-ambient/src/: lib.rs  main.rs  theme.rs  whisper_infer.rs
