[package]
name = "voice-ambient"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-ambient"
path = "src/main.rs"

[dependencies]
ratatui   = "0.28"
crossterm = "0.27"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite  = { version = "0.31", features = ["bundled"] }
chrono    = "0.4"
