[package]
name = "voice-ambient"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-ambient"
path = "src/main.rs"

[[bin]]
name = "audio-test"
path = "src/bin/audio_test.rs"

[[bin]]
name = "voice-input"
path = "src/bin/voice_input.rs"

[dependencies]
# TUI (existing)
ratatui    = "0.28"
crossterm  = "0.27"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite   = { version = "0.31", features = ["bundled"] }
chrono     = "0.4"

# Tier 1: CLI + audio orchestration
clap         = { version = "4", features = ["derive"] }
cpal         = "0.15"
hound        = "3.5"
rodio        = { version = "0.19", default-features = false }
rubato       = "0.15"
arboard      = "3"
enigo        = "0.2"
signal-hook        = "0.3"
crossbeam-channel  = "0.5"
libc               = "0.2"
tempfile     = "3"

# Tier 3: Whisper inference (whisper.cpp bindings with CUDA)
whisper-rs   = { version = "0.14", features = ["cuda"] }
